--- a/form.css
+++ b/form.css
@@ -1,14 +1,23 @@
+
 body {
     width: 99%;
-    height: 96vh;
+    height: 98vh;
     display: flex;
     align-content: center;
     justify-content: center;
+    background-color: black;
+}
+
+@font-face {
+    font-family: myFont;
+    src: url(Norse-Bold.otf);
+    font-style: normal;
+    font-weight: bold;
 }
 
 .container {
     position: relative;
-    width: 880px;
+    width: 930px;
     height: 100%;
     border: 1px solid black;
     display: flex;
@@ -24,12 +33,151 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: -1;
 }
 
 .form {
     position: absolute;
     left: 325px;
-    width: 555px;
+    width: 605px;
     height: 100%;
+    /* border: 1px solid red; */
+    background-color: rgb(245, 245, 245);
+    /* padding: 0px 30px; */
+}
+
+.logo {
+    position: absolute;
+    width: 100%;
+    height: 80px;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.4;
+    top: 22%;
+}
+
+.odin img{
+    position: absolute;
+    width: 60px;
+    height: 75px;
+    font-weight: bold;
+    top: 124px;
+    left: 80px;
+}
+
+.text {
+    top: 128px;
+    left: 140px;
+    position: absolute;
+    color: white;
+    vertical-align: top;
+    font-size: 65px;
+    font-family: myFont;
+}
+
+.first-section {
+    margin-top: 65px;
+    font-family: Helvetica;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 0px 30px;
+}
+
+.second-section {
+    width: 100%;
+    height: 210px;
+    background-color: white;
+    margin-top: 35px;
+    box-shadow: 0 10px 15px -10px rgba(0, 0, 0, 0.2);
+}
+
+.inputs {
+    padding: 2px 30px;
+}
+
+.para {
+    font-family: Helvetica;
+    font-weight: bold;
+}
+
+.left, 
+.right {
+    display: flex;
+    flex-direction: column;
+}
+
+.left span, 
+.right span {
+    font-size: 9px;
+    font-family: Arial;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+    margin-bottom: 2px;
+    margin-left: 2px;
+}
+
+input {
+    width: 170px;
+    height: 18px;
+    border-radius: 5px;
+    font-size: 13px;
+    padding-left: 3px;
+    border: 1px solid lightgrey;
+}
+
+.one {
+    display: flex;
+    padding-bottom: 15px;
+}
+
+.left {
+    padding-right: 70px;
+}
+
+input:focus {
+    outline: 1px solid lightskyblue;
+}
+
+input:invalid {
     border: 1px solid red;
+    outline: none;
+}
+
+.third-section {
+    padding: 0px 30px;
+    margin-top: 28px;
+    font-family: Helvetica;
+}
+
+.btn {
+    padding: 7px 24px;
+    background-color: #596D48;
+    font-size: 12px;
+    color: white;
+    font-weight: 700;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 1px 4px rgb(93, 93, 93);
+}
+
+.third-section p {
+    font-size: 12px;
+    font-weight: 600;
+    margin-top: 22px;
+}
+
+.login {
+    color: #596D48;
+    font-weight: 600;
+}
+
+.credit {
+    position: absolute;
+    color: white;
+    top: 94vh;
+    font-size: 11px;
+    left: 75px;
+}
+
+.under {
+    text-decoration: underline;
 }
